# risk-monitor

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: dune_queries.yaml  pools.yaml  stress_scenarios.yaml
queries/: collateral.sql  liquidations.sql  pool_state.sql  positions.sql  prices.sql
reports/: README.md
reports/WBTC-USDC/: 2025-12-29_22-37.md  latest.md
src/: __init__.py
src/data/: __init__.py  cache.py  dune_client.py
src/metrics/: __init__.py  core.py
src/reporting/: __init__.py  charts.py  markdown_report.py
src/scoring/: __init__.py  scorer.py
src/state/: __init__.py  models.py  reconstructor.py
src/stress/: __init__.py  engine.py  models.py
tests/: __init__.py  test_cache.py  test_dune_client.py  test_models.py  test_reconstructor.py  test_risk_metrics.py  test_risk_scorer.py  test_stress_engine.py
