[tool.poetry]
name = "risk-monitor"
version = "0.1.0"
description = "DeFi Lending Pool Risk Monitor for Morpho Blue"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dune-client = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.0.0"
web3 = "^6.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
jinja2 = "^3.0.0"
click = "^8.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
